# sql-testing-suite

./: .gitignore  CLAUDE.md  DEMO_README.md  LICENSE  PROJECT_PLAN_UPDATED.md  README.md  TEMP_REFACTOR_SPEC.md  age_validation_report.json  business_rules_results.json  conftest.py  demo_business_rules.py  demo_cli.py  demo_comprehensive.py  demo_data_profiler.py  demo_field_validation.py  demo_quick.py  demo_test.db  demo_validation_users.json  package-lock.json  pyproject.toml  test_business_rules_yaml.py  test_cli_business_rules.py  test_config.yaml
data/: profiler_test_data.db  simple_validation_rules.yaml  test_validation_rules.yaml
demo/: README.md  demo_business_rules.py  demo_cli.py  demo_comprehensive.py  demo_data_profiler.py  demo_field_validation.py  demo_quick.py  sample_business_rules.yaml  sample_test_rules.yaml  test_config.yaml
demo/tests/: test_business_rules_yaml.py  test_cli_business_rules.py
docs/: API_REFERENCE.md  BUSINESS_RULES_ADVANCED_FEATURES.md  CLI_MOCKUP.md  COMPONENT_SPECIFICATIONS.md  CONFIGURATION.md  ENTERPRISE_ROADMAP.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ARCHITECTURE.md  PROJECT_PLAN.md  STRUCTURE.md  TESTING_GUIDE.md  USER_GUIDE.md  WARP.md
examples/: README.md  advanced_business_rules_config.yaml  advanced_features_demo.py
examples/advanced/: comprehensive_tests.yaml  enterprise_config.yaml
examples/configs/: database.yaml  sqlite_config.yaml  unit_tests.yaml  validations.yaml
examples/demo/: README.md  data.sql  database.yaml  validation_rules.yaml  validation_rules_corrected.yaml
examples/getting_started/: simple_database_config.yaml  simple_tests.yaml  simple_validations.yaml
examples/tutorials/: TUTORIAL_01_GETTING_STARTED.md
reports/: demo_dashboard_20250928_210504.html  demo_dashboard_20250928_214502.html  demo_dashboard_20250928_214637.html  executive_dashboard_20250928_195937.html  executive_dashboard_20250928_202118.html  executive_dashboard_20250928_202413.html  interactive_test_report_20250928_202118.html  interactive_test_report_20250928_202119.html  interactive_test_report_20250928_202413.html  interactive_test_report_20250928_202414.html  large_dataset_test_20250928_202119.html  large_dataset_test_20250928_202414.html  query_results_report_20250928_195937.html  query_results_report_20250928_202118.html  query_results_report_20250928_202413.html  sqltest_pro_executive_dashboard_20250928_223758.html  technical_analysis_20250928_195937.html  technical_analysis_20250928_202118.html  technical_analysis_20250928_202413.html  technical_data_analysis_report_20250928_223758.html
reports/assets/: report.css  report.js
scripts/: demo.sh
sqltest/: __init__.py  __main__.py  exceptions.py
sqltest/cli/: __init__.py  main.py  utils.py
sqltest/cli/commands/: __init__.py  business_rules.py  configuration.py  database.py  init.py  profile.py  report.py  testing.py  validate.py
sqltest/config/: __init__.py  models.py  parser.py
sqltest/db/: __init__.py  advanced_connection.py  base.py  connection.py  data_operations.py  query_analyzer.py  query_cache.py  query_router.py  schema_introspector.py  transaction_manager.py
sqltest/db/adapters/: __init__.py  mysql.py  postgresql.py  sqlite.py
sqltest/modules/: __init__.py
sqltest/modules/assertions/: engine.py  models.py
sqltest/modules/business_rules/: __init__.py  config_loader.py  engine.py  models.py
sqltest/modules/field_validator/: __init__.py  config.py  models.py  validator.py
sqltest/modules/profiler/: __init__.py  analyzer.py  models.py
sqltest/modules/sql_testing/: __init__.py  advanced_mocking.py  assertions.py  ci_cd_integration.py  config_loader.py  enhanced_fixtures.py  enterprise_executor.py  executor.py  fixtures.py  intelligent_analysis.py  models.py  orchestration.py  performance_benchmarking.py  reporting.py
sqltest/modules/testing/: __init__.py  assertions.py  fixtures.py  reporting.py  test_runner.py
sqltest/modules/validators/: __init__.py
sqltest/reporting/: __init__.py  analyzer.py  base.py  engine.py  interactive.py  models.py  scheduler.py
sqltest/reporting/generators/: __init__.py  csv_generator.py  html_generator.py  json_generator.py
sqltest/reporting/templates/: default_report.html  interactive_dashboard.html
tests/: __init__.py  conftest.py  test_basic.py  test_business_rules_comprehensive.py  test_cli.py  test_field_validation.py  test_integration.py
tests/db/: test_base_adapter_streaming.py
tests/modules/business_rules/: test_engine_streaming.py
tests/modules/field_validator/: test_table_validation_streaming.py
tests/modules/profiler/: test_profiler_streaming.py
tests/reporting/: conftest.py  test_analyzer.py  test_engine.py  test_generators.py  test_html_generator_interactive.py  test_interactive.py  test_models.py  test_scheduler.py
tests/sql_testing/: conftest.py  test_assertions.py  test_config_loader.py  test_enterprise_executor.py  test_integration.py
